<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.airbnb.lottie.LottieAnimationView
            android:foregroundGravity="center"
            android:id="@+id/animationView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:lottie_fileName="money__trans_anim.json"
            app:lottie_loop="true"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_error"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="150dp"
                android:layout_marginStart="20dp"
                android:layout_alignParentStart="true"
                android:layout_height="wrap_content"
                android:hint="First Name"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="150dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                app:errorEnabled="true"
                android:hint="Last Name"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_error"
            android:layout_width="match_parent"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:errorEnabled="true"
            android:hint="@string/prompt_email"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:textColor="@color/black"
                android:drawableStart="@drawable/gmail"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:id="@+id/pass_error"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:id="@+id/cnf_pass_error"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:errorEnabled="true"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cnf_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cnf_pas"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_error"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="200dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:hint="Mobile No"
            app:prefixText="+91 "
            app:prefixTextColor="@color/black"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:counterMaxLength="1"
            android:layout_height="wrap_content"
            android:hint="Address"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_button"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:padding="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:cornerRadius="10dp"> </com.google.android.material.button.MaterialButton>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#CC000000"
                android:layout_gravity="center_horizontal"
                android:text="@string/already_have_an_account"> </TextView>
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ripple_effect"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/blue"
                android:textStyle="bold"> </TextView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>


</RelativeLayout>